add background colors

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Scroll Background Change</title>
+    <link rel="stylesheet" href="style.css">
+</body>
+<body>
+    <section class="section">Section 1</section>
+    <section class="section">Section 2</section>
+    <section class="section">Section 3</section>
+    <section class="section">Section 4</section>
+</body>
+<body>
     <h1>Welcome to My First Web App!</h1>
     <h3>Not the first I build, but the first I deploy!</h3>
     <button onclick="showMessage()">Click Me</button>
