re-adding index for github pages

--- a/index.html
+++ b/index.html
@@ -7,22 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scroll Background Change</title>
-    <link rel="stylesheet" href="style.css">
-</body>
-<body>
-    <section class="section">Section 1</section>
-    <section class="section">Section 2</section>
-    <section class="section">Section 3</section>
-    <section class="section">Section 4</section>
-</body>
-<body>
-    <h1>Welcome to My First Web App!</h1>
-    <h3>Not the first I build, but the first I deploy!</h3>
-    <button onclick="showMessage()">Click Me</button>
+    <h1>Financial Gains Tool</h1>
+    <br>
+    <h3>Estimate the value of your Investment Portfolio</h3>
+    <br>
+    <button onclick="showMessage()">Click here to know who built this</button>
     <p id="message"></p>
+    <br>
     <script src="script.js"></script>
+
+    <form action="/script.js" method="POST" class="form">
+        <h1>Have you invested before?</h1>
+        <label for="Yes">Yes</label>
+        <input type="radio" name="style" id="yes" value="yes">
+    </form>
 </body>
 </html>
