Added portfolio page

--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
         <div class="chart-container">
             <canvas id="investmentChart"></canvas>
         </div>
+
+        <div class="portfolio-button-container">
+            <button id="addPortfolio" class="portfolio-button">Add my Portfolio</button>
+        </div>
+        
     </div>
     
     <script src="script.js"></script>
