--- a/portfolio.html
+++ b/portfolio.html
@@ -48,13 +48,13 @@
         import { getFirestore, collection, query, where, getDocs } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
         
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_PROJECT.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT.appspot.com",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
-        };
+           apiKey: "AIzaSyAUfZeYcgzn3BHNiYXOQ3wvo5CMYmQ0i3k",
+           authDomain: "practice-investment-calculator.firebaseapp.com",
+           projectId: "practice-investment-calculator",
+           storageBucket: "practice-investment-calculator.firebasestorage.app",
+           messagingSenderId: "990783179778",
+           appId: "1:990783179778:web:f549d43eb65eab913c6b1b"
+         };
         
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
